--- a/etc/hosts/linux_hostgroups.cfg
+++ b/etc/hosts/linux_hostgroups.cfg
@@ -1,7 +1,7 @@
 ###############################################################################
 ###############################################################################
 #
-# HOST GROUP DEFINITIONS
+# HOST GROUP DEFINITIONS FOR LINUX
 #
 ###############################################################################
 ###############################################################################
