--- a/etc/templates/generic_template.cfg
+++ b/etc/templates/generic_template.cfg
@@ -1,5 +1,5 @@
 ###############################################################################
-# TEMPLATES.CFG - SAMPLE OBJECT TEMPLATES
+# GENERIC_TEMPLATES.CFG - SAMPLE OBJECT TEMPLATES
 #
 #
 # NOTES: This config file provides you with some example object definition
