--- a/etc/config/nagios.cfg
+++ b/etc/config/nagios.cfg
@@ -1337,25 +1337,29 @@ allow_empty_hostgroup_assignment=0
 #       WILL affect your system
 #loadctl_options=jobs_max=100;backoff_limit=10;rampup_change=5
 
-# Hosts
+# Hosts - what to check
 cfg_file=/usr/local/nagios/etc/hosts/linux_hostgroups.cfg
 cfg_file=/usr/local/nagios/etc/hosts/linux_hosts.cfg
+cfg_file=/usr/local/nagios/etc/hosts/printer_hostgroups.cfg
+cfg_file=/usr/local/nagios/etc/hosts/printer_hosts.cfg
+cfg_file=/usr/local/nagios/etc/hosts/switch_hostgroup.cfg
+cfg_file=/usr/local/nagios/etc/hosts/switch_hosts.cfg
 cfg_file=/usr/local/nagios/etc/hosts/windows_hostgroups.cfg
 cfg_file=/usr/local/nagios/etc/hosts/windows_hosts.cfg
 
-# Objects
+# Custom objects (commands how to check, contacts to send emails, timeperiods to measure how often to monitor)
 cfg_file=/usr/local/nagios/etc/objects/commands.cfg
 cfg_file=/usr/local/nagios/etc/objects/contacts.cfg
-cfg_file=/usr/local/nagios/etc/objects/printer.cfg
-cfg_file=/usr/local/nagios/etc/objects/switch.cfg
 cfg_file=/usr/local/nagios/etc/objects/timeperiods.cfg
 
-#Services
+# Service - a relation between host and command. Tells exactly what to check in  the host
 cfg_file=/usr/local/nagios/etc/services/localhost_services.cfg
 cfg_file=/usr/local/nagios/etc/services/oracle6.ucm10g_services.cfg
-cfg_file=/usr/local/nagios/etc/services/SRV0469451_services.cfg
+cfg_file=/usr/local/nagios/etc/services/SRV469451_services.cfg
+cfg_file=/usr/local/nagios/etc/services/printer_services.cfg
+cfg_file=/usr/local/nagios/etc/services/switch_services.cfg
 
-#Templates
+# Templates
 cfg_file=/usr/local/nagios/etc/templates/generic_template.cfg
 cfg_file=/usr/local/nagios/etc/templates/linux_templates.cfg
 cfg_file=/usr/local/nagios/etc/templates/service_templates.cfg
